--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+.DS_Store
+__pycache__
+
+*.xml
+*.prototxt
+*.caffemodel
+*.jpg
+*.png
+*.db
+*.pdf
+*.csv
+*.tsv
+
+BudgetAppVENV
 .venv
-BudgetAppVENV/
-.db
-.txt
-_pycache_/
